--- a/intrototidy.Rmd
+++ b/intrototidy.Rmd
@@ -58,3 +58,33 @@ gapminder %>% filter(year == "2007") %>% mutate(lifeExpMonths = 12 * lifeExp) %>
 
 ```
 
+## ggplot2
+
+```{r, results='hide'}
+library(ggplot2)
+```
+
+
+```{r}
+gapminder_1952 <- gapminder %>%
+  filter(year == 1952)
+
+# Change to put pop on the x-axis and gdpPercap on the y-axis
+ggplot(gapminder_1952, aes(x = pop, y = gdpPercap)) +
+  geom_point()
+
+# Create a scatter plot with pop on the x-axis and lifeExp on the y-axis
+ggplot(gapminder_1952, aes(x = pop, y = lifeExp)) + geom_point()
+
+# log scale
+
+# Change this plot to put the x-axis on a log scale
+ggplot(gapminder_1952, aes(x = pop, y = lifeExp)) +
+  geom_point() + scale_x_log10()
+# # Scatter plot comparing pop and gdpPercap, with both axes on a log scale
+ggplot(gapminder_1952, aes(x = pop, y = gdpPercap)) + geom_point() + scale_x_log10() + scale_y_log10()
+```
+
+
+## Additional aesthetics
+
