--- a/intrototidy.Rmd
+++ b/intrototidy.Rmd
@@ -88,3 +88,81 @@ ggplot(gapminder_1952, aes(x = pop, y = gdpPercap)) + geom_point() + scale_x_log
 
 ## Additional aesthetics
 
+```{r}
+# Scatter plot comparing pop and lifeExp, with color representing continent
+
+gapminder_1952 %>% ggplot(aes(x = pop, y = lifeExp, color = continent)) + geom_point() + scale_x_log10()
+
+# Add the size aesthetic to represent a country's gdpPercap
+ggplot(gapminder_1952, aes(x = pop, y = lifeExp, color = continent, size = gdpPercap)) +
+  geom_point() +
+  scale_x_log10()
+```
+
+## Faceting
+
+```{r}
+# Scatter plot comparing pop and lifeExp, faceted by continent
+
+ggplot(gapminder_1952, aes(x = pop, y = lifeExp)) + geom_point() + scale_x_log10() + facet_wrap(~ continent)
+
+# Scatter plot comparing gdpPercap and lifeExp, with color representing continent
+# and size representing population, faceted by year
+ggplot(gapminder, aes(x = gdpPercap, y = lifeExp, color = continent, size = pop)) + geom_point() + scale_x_log10() + facet_wrap(~ year) 
+```
+
+## The summarize verb
+
+```{r}
+# Summarize to find the median life expectancy
+gapminder %>% summarize(medianLifeExp = median(lifeExp))
+
+# Filter for 1957 then summarize the median life expectancy
+gapminder %>% filter(year == "1957") %>% summarize(medianLifeExp = median(lifeExp))
+
+# Filter for 1957 then summarize the median life expectancy and the maximum GDP per capita
+gapminder %>% filter(year == "1957") %>% summarize(medianLifeExp = median(lifeExp), maxGdpPercap = max(gdpPercap))
+```
+
+## The group_by verb
+
+```{r}
+# Find median life expectancy and maximum GDP per capita in each year
+gapminder %>% group_by(year) %>% summarize(medianLifeExp = median(lifeExp), maxGdpPercap = max(gdpPercap))
+
+# Find median life expectancy and maximum GDP per capita in each continent in 1957
+gapminder %>% filter(year == '1957') %>% group_by(continent) %>% summarize(medianLifeExp = median(lifeExp), maxGdpPercap = max(gdpPercap))
+
+# Find median life expectancy and maximum GDP per capita in each continent/year combination
+gapminder %>% group_by(year, continent) %>% summarize(medianLifeExp = median(lifeExp), maxGdpPercap = max(gdpPercap))
+```
+
+## Visualizing summarized data
+
+```{r}
+by_year <- gapminder %>%
+  group_by(year) %>%
+  summarize(medianLifeExp = median(lifeExp),
+            maxGdpPercap = max(gdpPercap))
+
+# Create a scatter plot showing the change in medianLifeExp over time
+ggplot(by_year, aes(x = year, y = medianLifeExp)) + geom_point() + expand_limits(y = 0)
+
+# Summarize medianGdpPercap within each continent within each year: by_year_continent
+by_year_continent = gapminder %>% group_by(continent, year) %>% summarize(medianGdpPercap = median(gdpPercap))
+
+# Plot the change in medianGdpPercap in each continent over time
+ggplot(by_year_continent, aes(x = year, y = medianGdpPercap, color = continent)) + geom_point() + expand_limits(y = 0)
+
+# Summarize the median GDP and median life expectancy per continent in 2007
+by_continent_2007 <- gapminder %>%
+  filter(year == 2007) %>%
+  group_by(continent) %>%
+  summarize(medianGdpPercap = median(gdpPercap),
+            medianLifeExp = median(lifeExp))
+
+# Use a scatter plot to compare the median GDP and median life expectancy
+ggplot(by_continent_2007, aes(x = medianGdpPercap, y = medianLifeExp, color = continent)) +
+  geom_point()
+```
+
