--- a/intrototidy.Rmd
+++ b/intrototidy.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Introduction to the Tidyverse"
 author: "Andi"
-date: "`r format(Sys.time(), '%d %B, %Y')`"
+Last updated: "`r format(Sys.time(), '%d %B, %Y')`"
 output: 
   html_document: 
     keep_md: yes
@@ -11,8 +11,9 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-```{r,results='hide'}
-# if we used both 'echo=True' and 'results=hide' the pipe would not work properly
+```{r, echo = FALSE, results='hide'}
+# if we used both 'echo=TRUE' and 'results=hide' the pipe would not work properly
+# if we used 'echo = FALSE' and 'results=hide' we would have only messages (i.e. attaching package) If we don't want them we set 'error = FALSE', 'warning = FALSE', and 'message = FALSE'.
 library(gapminder)
 library(dplyr)
 ```
