--- a/introtoggplt2.Rmd
+++ b/introtoggplt2.Rmd
@@ -65,3 +65,44 @@ ggplot(diamonds, aes(carat, price)) +
   geom_point() + geom_smooth()
 ```
 
+## Changing one geom or every geom
+
+```{r}
+# Map the color aesthetic to clarity
+ggplot(diamonds, aes(carat, price, color = clarity)) +
+  geom_point() +
+  geom_smooth()
+
+# Make the points 40% opaque
+ggplot(diamonds, aes(carat, price, color = clarity)) +
+  geom_point(alpha = 0.4) +
+  geom_smooth()
+```
+
+## Saving plots as variables
+
+```{r}
+# Draw a ggplot
+plt_price_vs_carat <- ggplot(diamonds, aes(carat, price)) + geom_point()
+plt_price_vs_carat
+
+# From previous step
+plt_price_vs_carat <- ggplot(diamonds, aes(carat, price))
+
+# Edit this to make points 20% opaque: plt_price_vs_carat_transparent
+plt_price_vs_carat_transparent <- plt_price_vs_carat + geom_point(alpha = 0.2)
+
+# See the plot
+plt_price_vs_carat_transparent
+
+# From previous step
+plt_price_vs_carat <- ggplot(diamonds, aes(carat, price))
+
+# Edit this to map color to clarity,
+# Assign the updated plot to a new object
+plt_price_vs_carat_by_clarity <- plt_price_vs_carat + geom_point(aes(color = clarity))
+
+# See the plot
+plt_price_vs_carat_by_clarity
+```
+
