--- a/introtoggplt2.Rmd
+++ b/introtoggplt2.Rmd
@@ -139,6 +139,8 @@ ggplot(mtcars, aes(wt, mpg, color = fcyl)) +
 ## All about aesthetics: color vs. fill
 
 ```{r}
+mtcars$fam <- factor(mtcars$am) # am transformed into a factor
+
 # Map fcyl to fill
 ggplot(mtcars, aes(wt, mpg, fill = fcyl)) +
   geom_point(shape = 1, size = 4)
@@ -153,4 +155,129 @@ ggplot(mtcars, aes(wt, mpg, fill = fcyl, color = fam)) +
 ```
 
 Shapely coding! Notice that mapping a categorical variable onto fill doesn't change the colors, although a legend is generated! This is because the default shape for points only has a color attribute and not a fill attribute! Use fill when you have another shape (such as a bar), or when using a point that does have a fill and a color attribute, such as `shape = 21`, which is a circle with an outline. Any time you use a solid color, make sure to use alpha blending to account for over plotting.
+
+## All about aesthetics: comparing aesthetics
+
+```{r}
+# Establish the base layer
+plt_mpg_vs_wt <- ggplot(mtcars, aes(wt, mpg))
+
+# Map fcyl to size
+plt_mpg_vs_wt + geom_point(aes(size = fcyl))
+
+# Map fcyl to alpha, not size
+plt_mpg_vs_wt +
+  geom_point(aes(alpha = fcyl))
+
+# Map fcyl to shape, not alpha
+plt_mpg_vs_wt +
+  geom_point(aes(shape = fcyl))
+
+# Use text layer and map fcyl to label
+plt_mpg_vs_wt +
+  geom_text(aes(label = fcyl))
+```
+
+Note: `label` and `shape` are only applicable to categorical data.
+
+## Using attributes
+
+## All about attributes: color, shape, size and alpha
+
+```{r}
+# A hexadecimal color
+my_blue <- "#4ABEFF"
+
+ggplot(mtcars, aes(wt, mpg)) +
+  # Set the point color and alpha
+  geom_point(color = my_blue, alpha = 0.6)
+
+# Change the color mapping to a fill mapping
+ggplot(mtcars, aes(wt, mpg, fill = fcyl)) +
+  # Set point size and shape
+  geom_point(color = my_blue, size = 10, shape = 1)
+```
+
+## All about attributes: conflicts with aesthetics
+
+```{r}
+ggplot(mtcars, aes(wt, mpg, color = fcyl)) +
+  # Add point layer with alpha 0.5
+  geom_point(alpha = 0.5)
+
+ggplot(mtcars, aes(wt, mpg, color = fcyl)) +
+  # Add text layer with label rownames(mtcars) and color red
+  geom_text(label = row.names(mtcars), color = 'red')
+
+ggplot(mtcars, aes(wt, mpg, color = fcyl)) +
+  # Add points layer with shape 24 and color yellow
+geom_point(shape = 24, color = "yellow")
+```
+
+## Going all out
+
+Notice that adding more aesthetic mappings to your plot is not always a good idea! You may just increase complexity and decrease readability.
+
+```{r}
+# 3 aesthetics: qsec vs. mpg, colored by fcyl
+ggplot(mtcars, aes(mpg, qsec, color = fcyl)) +
+  geom_point()
+
+# 4 aesthetics: add a mapping of shape to fam
+ggplot(mtcars, aes(mpg, qsec, color = fcyl, shape = fam)) +
+  geom_point()
+
+# 5 aesthetics: add a mapping of size to hp / wt
+ggplot(mtcars, aes(mpg, qsec, color = fcyl, shape = fam, size = hp/wt)) +
+  geom_point()
+```
+
+That's a pretty slick plot! Between the x and y dimensions, the color, shape, and size of the points, your plot displays five dimensions of the dataset!
+
+## Modifying aesthetics
+
+## Updating aesthetic labels
+
+```{r}
+ggplot(mtcars, aes(fcyl, fill = fam)) +
+  geom_bar() +
+  # Set the axis labels
+  labs(x = "Number of Cylinders",
+  y = "Count")
+
+palette <- c(automatic = "#377EB8", manual = "#E41A1C")
+
+ggplot(mtcars, aes(fcyl, fill = fam)) +
+  geom_bar() +
+  labs(x = "Number of Cylinders", y = "Count") +
+  # Set the fill color scale
+  scale_fill_manual("Transmission", values = palette)
+
+palette <- c(automatic = "#377EB8", manual = "#E41A1C")
+
+# Set the position
+ggplot(mtcars, aes(fcyl, fill = fam)) +
+  geom_bar(position = 'dodge') +
+  labs(x = "Number of Cylinders", y = "Count")
+  scale_fill_manual("Transmission", values = palette)
+```
+
+## Setting a dummy aesthetic
+
+We need it when we want univariate plots.
+```{r}
+# Plot 0 vs. mpg
+ggplot(mtcars, aes(mpg, 0)) +
+  # Add jitter 
+  geom_point(position = "jitter")
+
+ggplot(mtcars, aes(mpg, 0)) +
+  geom_jitter() +
+  # Set the y-axis limits
+  ylim(c(-2, 2))
+```
+
+
+
+
 
