--- a/introtoggplt2.Rmd
+++ b/introtoggplt2.Rmd
@@ -279,6 +279,36 @@ ggplot(mtcars, aes(mpg, 0)) +
 
 ## Scatter plots
 
+## Overplotting 1: large datasets
+
+```{r}
+load("diamonds.RData")
+
+# Plot price vs. carat, colored by clarity
+plt_price_vs_carat_by_clarity <- ggplot(diamonds, aes(carat, price, color = clarity))
+
+# Add a point layer with tiny points
+plt_price_vs_carat_by_clarity + geom_point(alpha = 0.5, shape = ".")
+
+# Update the point shape to remove the line outlines by setting shape to 16
+plt_price_vs_carat_by_clarity + geom_point(alpha = 0.5, shape = 16)
+```
+
+## Overplotting 2: Aligned values
+
+```{r}
+# Plot base
+plt_mpg_vs_fcyl_by_fam <- ggplot(mtcars, aes(fcyl, mpg, color = fam))
+
+# Default points are shown for comparison
+plt_mpg_vs_fcyl_by_fam + geom_point()
+
+# Alter the point positions by jittering, width 0.3
+plt_mpg_vs_fcyl_by_fam + geom_point(position = position_jitter(width = 0.3))
+
+# Now jitter and dodge the point positions
+plt_mpg_vs_fcyl_by_fam + geom_point(position = position_jitterdodge(jitter.width = 0.3, dodge.width = 0.3))
+```
 
 
 
